--- a/src/json/settings.json
+++ b/src/json/settings.json
@@ -1,5 +1,6 @@
 {
 	"channelUrl": "https://www.youtube.com/c/%channelName",
 	"apiHost": "www.youtube.com",
-	"apiPath": "/youtubei/v1/browse?key=%apiKey&prettyPrint=false"
+	"apiPath": "/youtubei/v1/browse?key=%apiKey&prettyPrint=false",
+	"apiParams": "EgZ2aWRlb3MgAjgC"
 }
