--- a/src/json/settings.json
+++ b/src/json/settings.json
@@ -2,5 +2,9 @@
 	"channelUrl": "https://www.youtube.com/c/%channelName",
 	"apiHost": "www.youtube.com",
 	"apiPath": "/youtubei/v1/browse?key=%apiKey&prettyPrint=false",
-	"apiParams": "EghmZWF0dXJlZPIGBAoCMgA%3D"
+	"apiParamsList": [
+		"EghmZWF0dXJlZPIGBAoCMgA%3D",
+		"EgZ2aWRlb3PyBgQKAjoA",
+		"EgdzdHJlYW1z8gYECgJ6AA%3D%3D"
+	]
 }
