--- a/src/json/settings.json
+++ b/src/json/settings.json
@@ -1,5 +1,5 @@
 {
-	"channelUrl": "https://www.youtube.com/c/%channelName",
+	"channelUrl": "https://www.youtube.com/@%channelName",
 	"apiHost": "www.youtube.com",
 	"apiPath": "/youtubei/v1/browse?key=%apiKey&prettyPrint=false",
 	"apiParamsList": [
